styles.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");

@font-face {
  font-family: "Norse";
  src: url("./fonts/Norse-Bold.woff2") format("woff2");
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

/* CSS RESET AND VARIABLES   */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  --norse-font: "Norse";
  --roboto-font: Roboto;
}

.container {
  display: flex;
  height: 100vh;
  margin: auto;
}

/* LEFT SECTION/PANEL STYLES */
.left-panel {
  background: url(./img/background.avif) no-repeat;
  background-size: cover;
  width: 40%;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.left-panel img {
  width: 2.5em;
}

.odin-logo {
  font-family: var(--norse-font), Georgia, "Times New Roman", Times, serif;
  color: white;
  font-size: 3rem;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 15px;
  gap: 7px;
  margin-top: 20vh;
  background-color: rgba(0, 0, 0, 0.4);
}

.credit {
  margin-top: auto;
  margin-bottom: 10px;
  color: white;
  text-align: center;
  font-size: 1.2rem;
}
.credit a {
  color: white;
}

/* RIGHT PANEL STYLES */

.right-panel {
  display: flex;
  flex-direction: column;
}

/* header styles */

header {
  font-family: var(--roboto-font), Georgia, "Times New Roman", Times, serif;
  font-size: 1.5rem;
  padding-left: 4vw;
  font-weight: 500;
  line-height: 1.5;
  background-color: rgba(209, 209, 255, 0.1);
}

header span {
  display: block;
}

header p {
  margin-top: 5vh;
}

.last-elem {
  margin-top: 1rem;
}

/* main styles */

main {
  height: 40vh;
}
.form-elems {
  display: flex;
  flex-wrap: wrap;
  padding-left: 4vw;
  gap: 1.5vw;
}
.form-elem {
  width: 28vw;
  display: flex;
  flex-direction: column;
  margin-bottom: 1rem;
}

input {
  height: 28px;
  font-size: 1.2rem;
  border: 2px solid #e5e7eb;
  border-radius: 5px;
}
label {
  letter-spacing: 1.5px;
  word-spacing: 4px;
}

input:user-invalid {
  border: 1px solid red;
}

input:focus {
  outline: none;
  border: 1px solid rgba(0, 0, 255, 0.568);
  box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.2);
}
h2 {
  font-family: var(--roboto-font), Georgia, "Times New Roman", Times, serif;
  padding: 2vh 4vw;
}

/* footer styles */
footer {
  background-color: rgba(216, 216, 216, 0.11);
  padding-left: 4vw;
}
hr {
  width: 100%;
  border: 1px solid rgba(0, 0, 0, 0.219);
  box-shadow: 2px 3px 3px rgba(0, 0, 0, 0.2);
}

button {
  margin-top: 2vh;
  margin-left: 4vw;
  width: 200px;
  height: 40px;
  border-radius: 5px;
  border: none;
  background-color: #596d48;
  font-family: var(--roboto-font), Georgia, "Times New Roman", Times, serif;
  font-size: 1.125rem;
  color: white;
  font-weight: 500;
  cursor: pointer;
}
button:hover {
  background-color: #7c9963;
}
button:active {
  background-color: #4d5f3d;
}

footer p {
  margin-top: 1rem;
  font-family: var(--roboto-font), Georgia, "Times New Roman", Times, serif;
  font-size: 1.05rem;
}

footer a {
  color: #698352;
  font-weight: 900;
}

@media (max-width: 800px) {
  .form-elem {
    width: calc(80% / 2);
    font-size: 0.8rem;
  }
  .odin-logo {
    font-size: 2rem;
  }
  header,
  main h2 {
    font-size: 1.2rem;
  }
  header p {
    margin-top: 2px;
  }
  input {
    height: 1.5rem;
  }
  .form-elem {
    margin-bottom: 5px;
  }
}

@media (max-width: 500px) {
  .form-elem {
    width: 90%;
  }
  footer {
    margin-top: 4rem;
    padding-bottom: 1rem;
  }
  .left-panel {
  }
}

